--- a/src/src/components/styles.css
+++ b/src/src/components/styles.css
@@ -152,10 +152,11 @@ body {
 }
 .mid-container {
     position: relative;
-    margin: 0 86.5px 0 86px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: center;
     width: fit-content;
     box-sizing: border-box;
 }
