--- a/src/src/components/FormInput.css
+++ b/src/src/components/FormInput.css
@@ -13,13 +13,13 @@
     padding: 30px;
     border-radius: 0px;
     background-color: #d8d0dd;
-    background-image: url('./wiki.png');
+    background-image: url('./assets/wiki.png');
     background-size: 100%;
-    background-position: center; 
+    background-position: center;
 }
 
 .inline-form label {
-    color: rgb(0, 0, 0); 
+    color: rgb(0, 0, 0);
     margin-bottom: 10px;
 }
 
