--- a/src/src/components/FormInput.css
+++ b/src/src/components/FormInput.css
@@ -48,3 +48,39 @@
 .finding-route {
     text-align: center;
 }
+
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+
+.suggestion {
+    cursor: pointer;
+    font-size: 12px;
+    padding: 8px;
+    background-color: #dcc9f1;
+    border: 5px solid #ffffff;
+    border-top: none;
+}
+
+.suggestion:hover {
+    background-color:  #d8d0dd;
+}
+
+.suggestion-container {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+}
+
+.suggestion-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    border: 1px solid #ddd;
+    border-top: none;
+    background-color: #fff;
+    max-height: 200px;
+    overflow-y: auto;
+    box-shadow: 0px 10px 20px rgb(107, 49, 182);
+}
