--- a/src/src/components/About.css
+++ b/src/src/components/About.css
@@ -3,11 +3,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    /* padding: 20px; */
+    padding-inline: 20px;
     background-color: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 20px;
+}
+
+.blank {
+    padding-bottom: 135px;
 }
 
 .anggota-container {
@@ -50,6 +55,11 @@
     color: aliceblue;
 }
 
+@media screen and (min-width: 1024px) {
+    .content {
+        padding-inline: 250px; /* Nilai saat layar besar */
+    }
+}
 
 
 
