--- a/src/src/components/Result.css
+++ b/src/src/components/Result.css
@@ -6,6 +6,7 @@
 }
 
 .result-container {
+    position: relative; /* Menjadikan kontainer posisi relatif */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,23 +19,23 @@
     padding: 30px;
 }
 
-.artikel-diperiksa {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.article-checked, .article-clicked, .exc-time {
+    position: absolute; /* Menjadikan elemen-elemen ini posisi absolut */
 }
 
-.artikel-dilalui {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.article-checked {
+    text-align: center;
+    top: 10px; 
+    right: 10px;
 }
 
-.waktu-pencarian {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.article-clicked {
+    text-align: center;
+    top: 10px; 
+    left: 10px;
+}
+
+.exc-time {
+    text-align: center;
+    bottom: 20px;
 }
