--- a/src/src/components/FormInput.css
+++ b/src/src/components/FormInput.css
@@ -92,3 +92,8 @@
     overflow-y: auto;
     box-shadow: 0px 10px 20px rgb(107, 49, 182);
 }
+
+.arrow-img {
+    width: 20px;
+    height: 11px;
+}
