--- a/src/src/components/Result.css
+++ b/src/src/components/Result.css
@@ -28,15 +28,18 @@
     text-align: center;
     top: 10px; 
     right: 10px;
+    color: #524869;
 }
 
 .article-clicked {
     text-align: center;
     top: 10px; 
     left: 10px;
+    color: #524869;
 }
 
 .exc-time {
     text-align: center;
     bottom: 20px;
+    color: #524869;
 }
