--- a/src/src/components/About.css
+++ b/src/src/components/About.css
@@ -3,16 +3,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* padding: 20px; */
     background-color: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    /* margin: 20px; */
     margin-inline: 300px;
 
-    /* Add media query for smartphones */
     @media (max-width: 1000px) {
-        margin-inline: 20px; /* Adjusted margin value for smartphones */
+        margin-inline: 20px;
     }
 }
 
@@ -22,11 +19,9 @@
     justify-content: center;
     align-items: center;
     text-align: justify;
-    /* padding: 20px; */
     padding-inline: 20px;
     background-color: #f5f5f5;
     border-radius: 10px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
 .blank {
@@ -40,11 +35,9 @@
     justify-content: center;
     align-items: center;
     background-color: #6d5e8d;
-    /* border-radius: 10px; */
 }
 
 .anggota-wrapper {
-    /* width: 500px;   */
     text-align: center;
     position: relative;
 }
@@ -72,4 +65,3 @@
     font-size: 16px;
     color: aliceblue;
 }
-
