--- a/src/src/components/Result.css
+++ b/src/src/components/Result.css
@@ -7,7 +7,7 @@
 }
 
 .result-container {
-    position: relative; /* Menjadikan kontainer posisi relatif */
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,25 +20,32 @@
     padding: 30px;
 }
 
-.article-checked, .article-clicked, .exc-time {
-    position: absolute; /* Menjadikan elemen-elemen ini posisi absolut */
-}
-
 .article-checked {
+    position: absolute;
     text-align: center;
-    top: 10px; 
+    top: 30px; 
     right: 10px;
     color: #524869;
 }
 
-.article-clicked {
+.addition {
+    font-size: 10px;
+    position: absolute;
     text-align: center;
-    top: 10px; 
+    top:10px; 
+    color: #524869;
+}
+
+.article-clicked {
+    position: absolute;
+    text-align: center;
+    top: 30px; 
     left: 10px;
     color: #524869;
 }
 
 .exc-time {
+    position: absolute;
     text-align: center;
     bottom: 20px;
     color: #524869;
