feat: add shadow

--- a/src/frontend/src/components/HowToUse.css
+++ b/src/frontend/src/components/HowToUse.css
@@ -34,6 +34,7 @@ body {
     padding: 11.7px 0 10.8px 12.6px;
     width: 724.5px;
     box-sizing: border-box;
+    box-shadow: 0px 8px 20px rgba(109, 94, 141, 0.727);
 }
 .step-text {
     margin: 18px 0 17.6px 0;
@@ -60,6 +61,7 @@ body {
     padding: 11.7px 0 10.8px 12.6px;
     width: 724.5px;
     box-sizing: border-box;
+    box-shadow: 0px 8px 20px rgba(109, 94, 141, 0.727);
 }
 .step-text-1 {
     margin: 18px 0 17.6px 0;
@@ -85,6 +87,7 @@ body {
     padding: 11.7px 0 10.8px 12.6px;
     width: 724.5px;
     box-sizing: border-box;
+    box-shadow: 0px 8px 20px rgba(109, 94, 141, 0.727);
 }
 .step-text-2 {
     margin: 18px 0 17.6px 0;
@@ -110,6 +113,7 @@ body {
     padding: 11.7px 0 10.8px 12.6px;
     width: 724.5px;
     box-sizing: border-box;
+    box-shadow: 0px 8px 20px rgba(109, 94, 141, 0.727);
 }
 .step-text-3 {
     margin: 18px 0 17.6px 0;
@@ -135,6 +139,7 @@ body {
     padding: 11.7px 0 10.8px 12.6px;
     width: 724.5px;
     box-sizing: border-box;
+    box-shadow: 0px 8px 20px rgba(109, 94, 141, 0.727);
 }
 .step-text-4 {
     margin: 18px 0 17.6px 0;
